# libclog

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  clog-config.cmake  clog.c  clog.h  config.mk
include/clog/: clog.h
src/: clog.c
test/: CMakeLists.txt  clog_functions.h  long_message.h  long_message_test.c  short_message_test.c  test.c
